# Qt_Random_Walk_Data_Visualization

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
data/: path_BOWTIE_35_cooling_firstOrder.txt  path_BOWTIE_35_cooling_secondOrder.txt  path_BOWTIE_35_nonCooling_secondOrder.txt  path_Circle_15.txt  path_Flat_Triangle_15.txt  path_Hexagon_15.txt  path_Polygon10_15.txt  path_Polygon12_15.txt  path_Polygon15_15.txt  path_Polygon5_15.txt  path_Polygon8_15.txt  path_Polygon9_15.txt  path_Rectangle_15.txt  path_Rectangle_4_1_15.txt  path_Rotated_Square_15.txt  path_Sharp_Triangle_15.txt  path_Square_15.txt  path_Stretched_Rotated_Square_15.txt  path_Triangle_15.txt
src/: AnimationWidget.cpp  AnimationWidget.h  FileListWidget.cpp  FileListWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/widgets/: ChartWidget.cpp  ChartWidget.h  PlotWidget.cpp  PlotWidget.h  SidebarWidget.cpp  SidebarWidget.h
